--- a/src/waterflu_frontend/src/index.scss
+++ b/src/waterflu_frontend/src/index.scss
@@ -4,3 +4,20 @@
   font-weight: bold;
   font-family: Arial, Helvetica, sans-serif;
 }
+.Logotipo{
+  position: absolute;
+  width: 70px;
+  height: 80px;
+
+}
+.Logotipo1{
+  position: absolute;
+  width: 70px;
+  height: 80px;
+}
+.ola{
+  color:rgb(0, 98, 125);
+  font-size: 30px;
+  
+  font-family: Arial, Helvetica, sans-serif;
+}
